--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
-# ____REMOVE THIS LINE AFTER RENAMING sample.env to .env ____
 DATABASE_URL=
 SESSION_ID=
 REMOVEBG_KEY=
-PREFIX=
-MODE=
-autoRead=
-statusview=
+PREFIX=!
+MODE=public
+autoRead=true
+statusview=false
