--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=
+DATABASE_URL=mongodb+srv://mateochatbot:xdtL2bYQ9eV3CeXM@gerald.r2hjy.mongodb.net/MateosWaBot?retryWrites=true&w=majority&appName=Cluster0
 SESSION_ID=
 REMOVEBG_KEY=
 PREFIX=!
